package pl.cezaryregec.zoo.actions;

public enum ZooActionIndex {
    GET_MENU,
    ADD_ANIMAL,
    GET_ANIMALS,
    GET_ANIMALS_BY_TYPE,
    REMOVE_ANIMAL,
    SHUTDOWN;
}
