package pl.cezaryregec.zoo.actions.animals;

public enum AnimalType {
    GIRAFFE,
    ELEPHANT,
    TIGER
}
